--- a/cap01/ex1_4.html
+++ b/cap01/ex1_4.html
@@ -10,4 +10,7 @@
 
     console.log(Number.isInteger(12)) //è Numver.isInteger(12) é para verificar se o numero é inteiro.
     console.log(Number.isInteger(3.50))
+
+    let valor = '3.75';
+    console.log(typeof valor)
 </script>
