--- a/cap04/ex4_8.html
+++ b/cap04/ex4_8.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <img src="./img/computador.jpg" alt="">
+    <img src="./img/carro-velocidade.jpg" alt="">
     <h1>Programa Verificar Velocidade</h1>
     <form id="form">
 
