--- a/cap06/teste.html
+++ b/cap06/teste.html
@@ -29,6 +29,10 @@
         //     console.log(`${i + 1}ª Cidade: ${cidade}`)
         //     console.log(`${cidade} ${i+1}`)
         // })
+
+        cidades.forEach((cidade, index) => {
+            console.log(`${index + 1}ª ${cidade}`)
+        })
     </script>
 </body>
 
