--- a/cap06/teste.html
+++ b/cap06/teste.html
@@ -13,13 +13,9 @@
 
 
 
-        const criancas = [
-            { nome: 'vinicius', idade: 12 },
-            { nome: 'joao', idade: 15}
-        ]
+        const cidade = "oi"
 
-        const copia = [...criancas];
-        console.log(copia[0].idade)
+        console.log(cidade.length)
 
 
 
