--- a/cap07/00.html
+++ b/cap07/00.html
@@ -49,18 +49,55 @@
 
             /* S | A | L | A | D | A | S */
             /* 0 | 1 | 2 | 3 | 4 | 5 | 6 */
-            const palavra = "saladas"
-            let posicao = palavra.indexOf("a")
-            let posicao2 = palavra.lastIndexOf("a")
-            let posicao3 = palavra.indexOf("sal")
-            let posicao4 = palavra.indexOf("e")
-            let existe = palavra.includes("d")
-            console.log(posicao)
-            console.log(posicao2)
-            console.log(posicao3)
-            console.log(posicao4)
-            console.log(existe)
+            // const palavra = "saladas"
+            // let posicao = palavra.indexOf("a")
+            // let posicao2 = palavra.lastIndexOf("a")
+            // let posicao3 = palavra.indexOf("sal")
+            // let posicao4 = palavra.indexOf("e")
+            // let existe = palavra.includes("d")
+            // console.log(posicao)
+            // console.log(posicao2)
+            // console.log(posicao3)
+            // console.log(posicao4)
+            // console.log(existe)
+
+
+            // const nome = "vinicius porto de farias alves"
+
+            // let posicao = nome.lastIndexOf(" ")
+            // let ultimoNome = nome.substr(posicao)
+            // let posicao2 = nome.indexOf(" ")
+            // let primeiroNome = nome.substr(0, posicao2)
+            // console.log(primeiroNome)
+            // console.log(ultimoNome)
             
+
+            // const frutas = ['vinicius', 'pedro', 'cidinha', 'mateus']
+            // let nome = frutas.includes('pedro')
+            // console.log(nome)
+
+
+            // const sabores = "calabresa, 4 queijos, pepperoni, mussarela"
+            // let separado = sabores.split(",")
+            // sabores.forEach(s => console.log(s))
+            // console.log(separado)
+            // console.log(separado[0], separado[1], separado[2], separado[3])
+
+
+            const nome = "Vinicius Porto de Farias Alves"
+            let separado = nome.split(" ")
+            let primeiroNome = separado[0]
+            let ultimoNome = nome.lastIndexOf(" ")
+
+            let frase = "treta, legumes, show, rock, baixo"
+            let fraseSeparada = frase.split(",")
+
+            // console.log(fraseSeparada)
+            // console.log(primeiroNome + nome.substr(ultimoNome))
+
+            let um = fraseSeparada[2]
+            console.log(um)
+
     </script>
     
 </body>
