--- a/cap07/00.html
+++ b/cap07/00.html
@@ -11,6 +11,32 @@
 
     <script>
 
+
+
+        const hoje = new Date()
+        const data = hoje.getDate()
+        console.log(data)
+
+
+
+
+
+
+        // const app = "App Controle Financeiro"
+        // const app2 = app.replace(" ", "")
+        // const app3 = app.replace(/ /g, "")
+        // const app4 = app.replace(/ /g, "").toLowerCase()
+        // console.log(app4)
+
+
+        // const senha = 'ABACAD'
+        // const senha1 = senha.replace("A", "X")
+        // const senha2 = senha.replace(/A/g, "X")
+        // console.log(senha1)
+        // console.log(senha2)
+
+
+
         // const flag = true
         // while(flag){
         //     const continua = prompt("S/N")
@@ -84,19 +110,27 @@
             // console.log(separado[0], separado[1], separado[2], separado[3])
 
 
-            const nome = "Vinicius Porto de Farias Alves"
-            let separado = nome.split(" ")
-            let primeiroNome = separado[0]
-            let ultimoNome = nome.lastIndexOf(" ")
+            // const nome = "Vinicius Porto de Farias Alves"
+            // let separado = nome.split(" ")
+            // let primeiroNome = separado[0]
+            // let ultimoNome = nome.lastIndexOf(" ")
 
-            let frase = "treta, legumes, show, rock, baixo"
-            let fraseSeparada = frase.split(",")
+            // let frase = "treta, legumes, show, rock, baixo"
+            // let fraseSeparada = frase.split(",")
 
-            // console.log(fraseSeparada)
-            // console.log(primeiroNome + nome.substr(ultimoNome))
+            // // console.log(fraseSeparada)
+            // // console.log(primeiroNome + nome.substr(ultimoNome))
 
-            let um = fraseSeparada[2]
-            console.log(um)
+            // let um = fraseSeparada[2]
+            // console.log(um)
+
+
+            // const str = 'vinicius'
+            // let caracterePesquisado = "ci"
+            // let novoCaractere = 'ji'
+            // const novaStr = str.replace(caracterePesquisado, novoCaractere )
+            // console.log(novaStr)
+            // console.log(str)
 
     </script>
     
