--- a/cap07/00.html
+++ b/cap07/00.html
@@ -11,14 +11,17 @@
 
     <script>
 
+        const data = new Date();
+        const mes = data.getMonth(); // Obtém o mês atual (um número de 0 a 11)
+        console.log(data.toLocaleString()); // Isso imprimirá a data atual em formato de string
 
+        
 
-        const hoje = new Date()
-        const data = hoje.getDate()
-        console.log(data)
+        /* ---------------------------------------------------------------- */
 
-
-
+        // const hoje = new Date()
+        // const data = hoje.getDate()
+        // console.log(data)
 
 
 
