--- a/cap07/00.html
+++ b/cap07/00.html
@@ -11,11 +11,20 @@
 
     <script>
 
-        const data = new Date();
-        const mes = data.getMonth(); // Obtém o mês atual (um número de 0 a 11)
-        console.log(data.toLocaleString()); // Isso imprimirá a data atual em formato de string
 
-        
+        const data = new Date().getFullYear()
+        const dia = new Date().getDate()
+        const mes = new Date().getMonth()
+        console.log(mes + 1)
+        console.log(dia)
+        console.log(data)
+
+
+
+        // const data = new Date();
+        // const mes = data.getMonth(); // Obtém o mês atual (um número de 0 a 11)
+        // console.log(data.toLocaleString()); // Isso imprimirá a data atual em formato de string
+      
 
         /* ---------------------------------------------------------------- */
 
