--- a/cap07/00.html
+++ b/cap07/00.html
@@ -6,18 +6,24 @@
     <title>000</title>
 </head>
 <body>
-
+    
 
 
     <script>
 
 
-        const data = new Date().getFullYear()
-        const dia = new Date().getDate()
-        const mes = new Date().getMonth()
-        console.log(mes + 1)
-        console.log(dia)
-        console.log(data)
+        
+
+
+
+
+
+        // const data = new Date().getFullYear()
+        // const dia = new Date().getDate()
+        // const mes = new Date().getMonth()
+        // console.log(mes + 1)
+        // console.log(dia)
+        // console.log(data)
 
 
 
