--- a/cap07/ex7_8.html
+++ b/cap07/ex7_8.html
@@ -21,7 +21,7 @@
         </p>
 
         <p>
-            Valor da Conta:
+            Valor da Conta R$:
             <input type="number" id="inValor" min=0 step="0.01" class="alinha-direita" required>
             <input type="submit" value="Calcular Multa e Juros">
         </p>
@@ -37,7 +37,7 @@
         </p>
 
         <p>
-            Total a Pagar:
+            Total a Pagar R$...:
             <input type="number" id="outTotal" class="alinha-direita" readonly>
             <input type="reset" value="Nova Conta">
         </p>
