--- a/cap07/ex7_a.html
+++ b/cap07/ex7_a.html
@@ -12,7 +12,7 @@
     <h1>Programa Criptografia</h1>
     <form>
         <p>
-            <input type="text" id="mensagem" required>
+            <input type="text" id="inMensagem" required>
         </p>
         <input type="submit" value="Criptografar" id="criptografar">
         <button type="button" id="btDecript">Mostrar Mensagem</button>
