--- a/cap08/ex8_1.html
+++ b/cap08/ex8_1.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/livrojs/cap08/css/style.css">
     <title>Ex8_1</title>
 </head>
 <body>
+
+    <h3 id="resp"></h3>
 
 
     
